; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/sn9c102/extr_sn9c102_core.c_sn9c102_i2c_try_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/sn9c102/extr_sn9c102_core.c_sn9c102_i2c_try_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sn9c102_device = type { i32 }
%struct.sn9c102_sensor = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sn9c102_device*, %struct.sn9c102_sensor*, i32, i32)* @sn9c102_i2c_try_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sn9c102_i2c_try_write(%struct.sn9c102_device* %0, %struct.sn9c102_sensor* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sn9c102_device*, align 8
  %6 = alloca %struct.sn9c102_sensor*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.sn9c102_device* %0, %struct.sn9c102_device** %5, align 8
  store %struct.sn9c102_sensor* %1, %struct.sn9c102_sensor** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.sn9c102_device*, %struct.sn9c102_device** %5, align 8
  %10 = load %struct.sn9c102_sensor*, %struct.sn9c102_sensor** %6, align 8
  %11 = load %struct.sn9c102_sensor*, %struct.sn9c102_sensor** %6, align 8
  %12 = getelementptr inbounds %struct.sn9c102_sensor, %struct.sn9c102_sensor* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @sn9c102_i2c_try_raw_write(%struct.sn9c102_device* %9, %struct.sn9c102_sensor* %10, i32 3, i32 %13, i32 %14, i32 %15, i32 0, i32 0, i32 0)
  ret i32 %16
}

declare dso_local i32 @sn9c102_i2c_try_raw_write(%struct.sn9c102_device*, %struct.sn9c102_sensor*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
